# SlackBBot

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.txt  readme.md
cmake/: json.cmake
doc/: Plugin.md
doc/en/: Plugin.md
include/: Export.h  FunctionExtern.h  GlobalData.h  ProgramInfo.h.in  SLBLog.h  SlackBot.h
include/Config/: CommandRuleConfig.h
include/Data/: Data.h  DataToJson.h  ServerData.h
include/Message/: MessageDefinition.h  iMessageDefinition.h
include/Network/: ClientBase.h  ServerBase.h
include/Network/Client/: NapCat.h
include/Network/ReportingServer/: OneBot11.h
include/Plugin/: PluginManager.h
include/Plugin/Head/: QNTBOT_Plugin_Base.h
include/Plugin/Plugin/: Plugin_Base.cpp  Plugin_Base.h  Plugin_FunctionTypeDefinition.h
include/Processor/: CommandProcessor.h  InitializingFramework.h  MessageQueueProcessor.h  ProgramStop.h
include/Processor/QOE/: qoeArg.h
plugins/dev-test/: dev-test.cpp  dev-test.h
src/: GlobalData.cpp  SLBLog.cpp  main.cpp
src/Data/: Data.cpp
src/Message/: iMessageDefinition.cpp
src/Network/: ServerBase.cpp
src/Network/Client/: NapCat.cpp
src/Network/ReportingServer/: OneBot11.cpp
src/Plugin/: PluginManager.cpp
src/Processor/: CommandProcessor.cpp  InitializingFramework.cpp  MessageQueueProcessor.cpp  ProgramStop.cpp
src/Processor/QOE/: qoeArg.cpp
